--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node ./src/addon.js",
     "test": "jest",
     "install": "node-gyp rebuild"
   },
