--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js_dev_test",
   "version": "1.0.0",
-  "description": "JavaScript Developer Code Test (meldCX)",
+  "description": "JavaScript Developer Code Test",
   "main": "index.js",
   "directories": {
     "test": "test"
